# rdma-examples

./: .gitignore  Makefile  README.md  client.c  rdma_common.h  server.c
.claude/: settings.json
.claude/agents/: README.md  bold-proposer.md  code-reducer.md  paranoia-proposer.md  proposal-critique.md  proposal-reducer.md
.claude/commands/: README.md  mega-planner.md
.claude/hooks/: log-token-usage.sh
.claude/skills/: README.md
.claude/skills/partial-consensus/: README.md  SKILL.md  partial-review-prompt.md
.claude/skills/partial-consensus/scripts/: partial-consensus.sh
dpa/: build_dpacc.sh  client.c  common.c  common.h  meson.build  server.c  server_dev.h  server_kernels_dev.c
