project('rdma_dpa_latency', 'c',
	default_options: ['buildtype=debug', 'c_std=c11'],
	meson_version: '>= 0.61.2'
)

add_project_arguments('-DDOCA_ALLOW_EXPERIMENTAL_API', language: ['c'])

common_deps = [
	dependency('doca-common'),
	dependency('doca-rdma'),
]

dpa_dep = dependency('doca-dpa')
dpa_lib_dir = dpa_dep.get_variable(pkgconfig : 'libdir')
dpa_program_name = 'latency_server_program'
dpa_target_name = 'latency_server_dpa'
dpa_device_src = meson.project_source_root() + '/server_kernels_dev.c'
dpa_build_script = meson.project_source_root() + '/build_dpacc.sh'
dpa_mcpu_flag = 'nv-dpa-bf3,nv-dpa-cx7,nv-dpa-cx8'

run_command(dpa_build_script,
	meson.project_build_root(),
	dpa_device_src,
	dpa_target_name,
	dpa_program_name,
	dpa_mcpu_flag,
	dpa_lib_dir,
	check: true)

dpa_program_lib_dir = meson.project_build_root() + '/' + dpa_target_name + '/device/build_dpacc'
dpa_program_lib = meson.get_compiler('c').find_library(dpa_program_name,
	dirs: dpa_program_lib_dir,
	static: true)

executable('latency_client',
	['client.c', 'common.c'],
	dependencies: common_deps,
	install: false)

executable('latency_server',
	['server.c', 'common.c'],
	dependencies: common_deps + [dpa_dep, dependency('libflexio'), dpa_program_lib],
	install: false)
